--- a/index.html
+++ b/index.html
@@ -7,36 +7,28 @@
   <title>Spinners Pizza</title>
   <link rel="icon" href="assets/images/logos/1.png">
 
-  <!-- General Open Graph Meta Tags -->
   <meta property="og:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
   <meta property="og:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
   <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
   <meta property="og:url" content="https://spinners.pizza" />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
   <meta name="twitter:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
   <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
 
-  <!-- Apple iMessage Meta Tag (iOS Smart App Banner Fallback) -->
   <meta name="apple-mobile-web-app-title" content="Spinner's Pizza" />
   <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
 
-  <!-- Facebook Meta Tags -->
   <meta property="og:site_name" content="Spinner's Pizza" />
   <meta property="og:locale" content="en_US" />
 
-  <!-- WhatsApp, Facebook Messenger, and Other Messaging Apps -->
   <meta name="og:image:width" content="1200" />
   <meta name="og:image:height" content="630" />
 
-  <!-- Additional Link for Favicons -->
   <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" sizes="192x192" />
 
-
-  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -46,7 +38,8 @@
             primary: '#ef4444',
             secondary: '#ffffff',
             tertiary: '#4488ef',
-            'tertiary-light': '#f2f1f1'
+            'tertiary-light': '#f2f1f1',
+            'border-color': '#3b82f6'
           }
         },
         screens: {
@@ -77,14 +70,22 @@
 
     .logo-container {
       perspective: 1000px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      border: 4px solid #3b82f6;
+      background-color: #ffffff;
+      border-radius: 0.5rem;
+    }
+
+    .header {
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
 
 <body class="bg-gray-100 text-gray-800">
-  <header class="bg-primary text-secondary fixed w-full z-30 shadow-md overflow-visible">
+  <header class="bg-primary text-secondary fixed w-full z-30 shadow-md header overflow-visible">
     <div class="container mx-auto flex justify-between items-center p-4 relative">
-      <div class="absolute left-4 top-5 bg-secondary rounded-md h-40 w-40 flex items-center justify-center border-4 border-blue logo-container">
+      <div class="absolute left-4 top-5 logo-container h-40 w-40 flex items-center justify-center">
         <img id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover animate-rotate" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
       </div>
       <h1 class="text-xl sm:text-2xl font-bold ml-48 mr-4">Spinners Pizza</h1>
@@ -101,8 +102,7 @@
         </ul>
         <button id="mobile-menu-button" class="md:hidden text-secondary hover:text-tertiary">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M4 6h16M4 12h16M4 18h16" />
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </button>
       </nav>
@@ -120,23 +120,19 @@
       </ul>
     </div>
   </header>
-  <section id="home" class="bg-cover bg-center h-screen relative"
-    style="background-image: url('assets/images/background/current.jpg');">
+  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('assets/images/background/current.jpg');">
     <div class="absolute inset-0 z-10 bg-black bg-opacity-50"></div>
     <div class="relative z-10 h-full flex flex-col items-center justify-center text-center text-secondary p-4 px-6 sm:px-12">
       <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Welcome to Spinners Pizza!</h2>
       <p class="text-lg sm:text-xl mb-6">Grovespring's local pizzeria, BBQ palace, and burger joint—come hang out!</p>
-      <a href="#menu"
-        class="bg-primary px-6 py-3 rounded text-lg hover:bg-red-600 transition-colors duration-300">Explore Our Menu</a>
+      <a href="#menu" class="bg-primary px-6 py-3 rounded text-lg hover:bg-red-600 transition-colors duration-300">Explore Our Menu</a>
     </div>
   </section>
   <section id="about" class="py-12 bg-gray-50">
     <div class="container mx-auto text-center px-6">
       <h3 class="text-2xl sm:text-3xl font-bold mb-4">About Spinners Pizza</h3>
-      <p class="text-base sm:text-lg">At Spinners Pizza, our passion is crafting delicious pizzas and other menu items
-        with the finest ingredients. Our commitment to quality and community drives us to serve you every day.</p>
-      <p class="mt-4 text-base sm:text-lg">We proudly offer discounts to our heroes – service members, police officers,
-        firefighters, and first responders – as a thank you for their dedication.</p>
+      <p class="text-base sm:text-lg">At Spinners Pizza, our passion is crafting delicious pizzas and other menu items with the finest ingredients. Our commitment to quality and community drives us to serve you every day.</p>
+      <p class="mt-4 text-base sm:text-lg">We proudly offer discounts to our heroes – service members, police officers, firefighters, and first responders – as a thank you for their dedication.</p>
     </div>
   </section>
   <section class="py-12 bg-gray-100">
@@ -153,32 +149,19 @@
             <li>Saturday: 11am - 8pm</li>
             <li>Sunday: 11am - 6pm</li>
           </ul>
-          <p class="mt-4 font-semibold text-xs">Please note that these are our winter operating hours. Check back for
-            updates on our regular hours.</p>
+          <p class="mt-4 font-semibold text-xs">Please note that these are our winter operating hours. Check back for updates on our regular hours.</p>
         </div>
         <div id="gallery" class="md:w-2/3 bg-tertiary-light p-6 rounded-md shadow-md">
           <h3 class="text-2xl sm:text-3xl font-bold mb-4">Explore Our Space</h3>
-          <p class="mb-6 text-base sm:text-lg">Take a look inside our cozy and welcoming restaurant—perfect for family
-            meals or a quick bite with friends!</p>
+          <p class="mb-6 text-base sm:text-lg">Take a look inside our cozy and welcoming restaurant—perfect for family meals or a quick bite with friends!</p>
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-            <img src="assets/images/restaurant/02 walking in from front door looking at the dining room.jpg"
-              alt="Walking into Dining Room" class="rounded-md shadow-md w-full"
-              onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=2'">
-            <img src="assets/images/restaurant/03 straight from the entrance looking at the counter.jpg"
-              alt="Looking at the Counter" class="rounded-md shadow-md w-full"
-              onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
-            <img src="assets/images/restaurant/04 view from counter looking at the door to the restaurant and the restrooms.jpg"
-              alt="Door to Restaurant and Restrooms" class="rounded-md shadow-md w-full"
-              onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=4'">
-            <img src="assets/images/restaurant/05 view of dining room from the counter.jpg"
-              alt="Dining Room from Counter" class="rounded-md shadow-md w-full"
-              onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=5'">
-            <img src="assets/images/restaurant/06 dining area.jpg" alt="Dining Area 1"
-              class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=6'">
-            <img src="assets/images/restaurant/07 dining area.jpg" alt="Dining Area 2"
-              class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=7'">
-            <img src="assets/images/restaurant/08 dining area.jpg" alt="Dining Area 3"
-              class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=8'">
+            <img src="assets/images/restaurant/02 walking in from front door looking at the dining room.jpg" alt="Walking into Dining Room" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=2'">
+            <img src="assets/images/restaurant/03 straight from the entrance looking at the counter.jpg" alt="Looking at the Counter" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
+            <img src="assets/images/restaurant/04 view from counter looking at the door to the restaurant and the restrooms.jpg" alt="Door to Restaurant and Restrooms" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=4'">
+            <img src="assets/images/restaurant/05 view of dining room from the counter.jpg" alt="Dining Room from Counter" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=5'">
+            <img src="assets/images/restaurant/06 dining area.jpg" alt="Dining Area 1" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=6'">
+            <img src="assets/images/restaurant/07 dining area.jpg" alt="Dining Area 2" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=7'">
+            <img src="assets/images/restaurant/08 dining area.jpg" alt="Dining Area 3" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=8'">
           </div>
         </div>
       </div>
@@ -288,7 +271,6 @@
               </div>
             </div>
           </div>
-          <!-- Add more reviews as needed -->
         </div>
       </div>
     </div>
@@ -307,9 +289,7 @@
         <p class="mb-2">Address: 9537 MO-5, Grovespring, MO 65662</p>
         <p class="mb-2">(417) 462-7746</p>
         <div class="w-full h-64 sm:h-96 mt-6">
-          <iframe class="w-full h-full"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3169.371964378669!2d-92.60439042413377!3d37.40468217208095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c55157bff0a993%3A0x8bf775b1d6a5af4d!2sSpinners%20Restaurant!5e0!3m2!1sen!2sus!4v1732477221013!5m2!1sen!2sus"
-            style="border:0;" allowfullscreen="" loading=""></iframe>
+          <iframe class="w-full h-full" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3169.371964378669!2d-92.60439042413377!3d37.40468217208095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c55157bff0a993%3A0x8bf775b1d6a5af4d!2sSpinners%20Restaurant!5e0!3m2!1sen!2sus!4v1732477221013!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading=""></iframe>
         </div>
       </div>
     </div>
